<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_type"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textStyle="bold"
      android:textSize="18sp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

    <EditText
      android:id="@+id/et_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/text_title"
      app:layout_constraintTop_toBottomOf="@id/tv_type"
      android:inputType="text"
      android:textSize="16sp"
      android:importantForAutofill="no" />

    <EditText
      android:id="@+id/et_text"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:hint="@string/text_task"
      app:layout_constraintTop_toBottomOf="@id/et_title"
      app:layout_constraintBottom_toTopOf="@id/btn_submit"
      android:inputType="textMultiLine"
      android:textSize="16sp"
      android:gravity="top"
      android:background="@null"
      android:importantForAutofill="no" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_submit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/light_green"
      android:text="@string/text_submit"
      android:layout_margin="12dp"
      android:paddingVertical="12dp"
      android:paddingHorizontal="18dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@null"
      android:text="@string/text_cancel"
      android:textColor="@color/light_green"
      android:layout_margin="12dp"
      android:paddingVertical="12dp"
      android:paddingHorizontal="18dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/btn_submit" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
