<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_notes"
      android:textSize="22sp"
      android:layout_margin="12dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_notes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/tv_label"
      tools:itemCount="4"
      tools:listitem="@layout/item_notes" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_no_notes"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_no_notes_available"
      android:textSize="22sp"
      android:layout_margin="12dp"
      android:visibility="gone"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/btn_add_media"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="40dp"
      android:contentDescription="@string/text_add_notes"
      android:src="@drawable/ic_add_white_24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
